--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "import": "^0.0.6",
     "mongoose": "^7.1.1",
@@ -20,6 +21,5 @@
     "nodemon": "^2.0.22",
     "session": "^0.1.0"
   },
-  "devDependencies": {},
   "description": ""
 }
