--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "import": "^0.0.6",
+    "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
