--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-    "session": "^0.1.0",
-    "type": "module"
+    "router": "^1.3.8",
+    "session": "^0.1.0"
   },
   "description": ""
 }
