--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aggregate": "^0.1.0",
+    "async": "^3.2.4",
+    "await": "^0.2.6",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
@@ -22,8 +25,10 @@
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "regex": "^0.1.1",
     "router": "^1.3.8",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "trim": "^1.0.1"
   },
   "description": ""
 }
