--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "await": "^0.2.6",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "build": "^0.1.4",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
