--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "build:digitalocean": "npm install --production=false && npm run build && npm ci",
+   "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -28,6 +29,7 @@
     "nodemon": "^2.0.22",
     "regex": "^0.1.1",
     "router": "^1.3.8",
+    "run": "^1.4.0",
     "session": "^0.1.0",
     "trim": "^1.0.1"
   },
