--- a/package.json
+++ b/package.json
@@ -10,44 +10,48 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-"aggregate": "^0.1.0",
+    "aggregate": "^0.1.0",
     "async": "^3.2.4",
     "await": "^0.2.6",
+    "axios": "^0.27.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "build": "^0.1.4",
+    "case": "^1.6.3",
+    "change": "^0.0.0",
     "change-case": "^4.1.2",
+    "compression": "^1.7.4",
+    "convert-units": "^2.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-rate-limit": "^6.4.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "extract-values": "^0.1.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "import": "^0.0.6",
+    "lodash": "^4.17.21",
     "lower-case": "^2.0.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "openssl": "^2.0.0",
     "regex": "^0.1.1",
     "router": "^1.3.8",
     "run": "^1.4.0",
+    "serve-static": "^1.15.0",
     "session": "^0.1.0",
     "string-similarity": "^4.0.4",
-    "axios": "^0.27.2",
-    "case": "^1.6.3",
-    "change": "^0.0.0",
-    "compression": "^1.7.4",
-    "convert-units": "^2.3.4",
-    "express-rate-limit": "^6.4.0",
-    "lodash": "^4.17.21",
-    "serve-static": "^1.15.0",
+    "trim": "^1.0.1",
     "upper-case-first": "^2.0.2",
-    "uuid": "^8.3.2",
-    "trim": "^1.0.1"
-  },"devDependencies": {
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0"
